internal class AnimationNames {
    internal static string isMoving = "isMoving";
    internal static string isRunning = "isRunning";
    internal static string isOnGround = "isOnGround";
    internal static string isOnWall = "isOnWall";
    internal static string isOnCeiling = "isOnCeiling";
    internal static string yVelocity = "yVelocity";
    internal static string jump = "jump";
    internal static string hasTarget = "hasTarget";
    internal static string attack = "attack";
    internal static string rangedAttack = "rangedAttack";
    internal static string hit = "hit";
    internal static string isAlive = "isAlive";
    internal static string lockVelocity = "lockVelocity";
    internal static string isClimbing = "isClimbing";
    internal static string cornerClimb = "cornerClimb";
    internal static string isOnWallHang = "isOnWallHang";
    internal static string isWallSliding = "isWallSliding";
    internal static string explosion = "explosion";
    internal static string hasRangedAttackTarget = "hasRangedAttackTarget";
    internal static string throwingBomb = "throwingBomb";
}